WEB-9724: Fixes logo being overlapped by mobile menu on small mobile screens

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -37,7 +37,7 @@
   &__logo {
     position: absolute;
     right: 2.6rem;
-    z-index: 10;
+    z-index: 101;
 
     @include breakpoint(desktop) {
       position: relative;
@@ -300,7 +300,7 @@
       .top-menu {
         &__menuitem {
           background-color: $secondary-blue-1;
-          margin: 0.9rem auto 0 auto;
+          margin: 2.9rem auto 0 auto;
           padding: 2.5rem 0 2.5rem 6.3rem;
           width: 90%;
 
